Fix: Distorted Image in desktop

--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,7 @@ header {
     }
     .images {
         height: 20vh;
+        width: auto;
     }
 
 
